network/ebs-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: agrobd-service
  namespace: agrobd
spec:
  selector:
    app: agrobd
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
