network/ingress-ebs.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: agrobd-service-ingress
  namespace: agrobd
  annotations:
    konghq.com/request-buffering: "false"
    konghq.com/response-buffering: "false"
    konghq.com/strip-path: "true"
    kubernetes.io/ingress.class: kong
spec:
  rules:
    #- host: uat-crm-v2.oss.net.bd
    - host: 
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: agrobd-service
                port:
                  number: 80
