network/networkPoliecy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: agrobd-network-policy
  namespace: agrobd
spec:
  podSelector: {}  # applies to all pods;
  # podSelector:
  #   matchLabels:
  #     app: bida-oss

  policyTypes:
    - Ingress
    - Egress

  ingress:
    - {}  # empty rule = allow all ingress
  egress:
    - {}  # empty rule = allow all egress


  # # ---------------------------------------------------------------------------
  # # Ingress: who can reach the bida‑oss pods
  # # ---------------------------------------------------------------------------
  # ingress:
  #   - from:
  #       - ipBlock:
  #           cidr: 192.168.0.0/16          # internal RFC‑1918 subnet
  #       - ipBlock:
  #           cidr: 10.10.200.0/24          # node / kube‑probe subnet
  #       - ipBlock:
  #           cidr: 114.130.119.28/32       # gateway‑hub
  #       - ipBlock:
  #           cidr: 103.143.148.218/32      # DR load balancer
  #       - namespaceSelector:
  #           matchLabels:
  #             name: kong
  #         podSelector:
  #           matchLabels:
  #             app.kubernetes.io/instance: kong
  #             app.kubernetes.io/component: app
  #             app.kubernetes.io/name: kong
  #       - podSelector:
  #           matchLabels:
  #             app: redis-stack             # Redis sidecar

  # # ---------------------------------------------------------------------------
  # # Egress: what the bida‑oss pods may contact
  # # ---------------------------------------------------------------------------
  # egress:
  #   # --- MySQL ---------------------------------------------------------------
  #   - to:
  #       - ipBlock:
  #           cidr: 10.10.100.20/32          # external MySQL server
  #     ports:
  #       - protocol: TCP
  #         port: 3306

  #   # --- CoreDNS / kube‑dns --------------------------------------------------
  #   - to:
  #       - namespaceSelector:
  #           matchLabels:
  #             kubernetes.io/metadata.name: kube-system
  #         podSelector:
  #           matchLabels:
  #             k8s-app: kube-dns            # CoreDNS pods
  #     ports:
  #       - protocol: UDP
  #         port: 53
  #       - protocol: TCP
  #         port: 53

  #   # --- Redis in same namespace --------------------------------------------
  #   - to:
  #       - podSelector:
  #           matchLabels:
  #             app: redis-stack             # Redis Deployment/Service
  #     ports:
  #       - protocol: TCP
  #         port: 6379

  #   # --- Kong app in different namespace ------------------------------------
  #   - to:
  #       - namespaceSelector:
  #           matchLabels:
  #             name: kong
  #         podSelector:
  #           matchLabels:
  #             app.kubernetes.io/instance: kong
  #             app.kubernetes.io/component: app
  #             app.kubernetes.io/name: kong
  #     ports:
  #       - protocol: TCP
  #         port: 8000     # Kong proxy port
  #       - protocol: TCP
  #         port: 8443     # Kong secure proxy port 

  #   # --- External service  ----------------------------------
  #   - to:
  #       - ipBlock:
  #           cidr: 103.106.118.67/32     # DC2 lb
  #       - ipBlock:
  #           cidr: 103.106.118.65/32    # DC2 lb
  #       - ipBlock:
  #           cidr: 103.143.148.218/32   # DR lb
  #       - ipBlock:
  #           cidr: 114.130.119.28/32    # gatewayhub 
  #     ports:
  #       - protocol: TCP
  #         port: 80                         # HTTP
  #       - protocol: TCP
  #         port: 443                        # HTTPS
  #       - protocol: TCP
  #         port: 8092                     # --- Allow devpdfservice.pilgrimdb.org

  #   # --- Cloudflare ip range --------------------------------
  #   - to:
  #       - ipBlock:
  #           cidr: 173.245.48.0/20
  #       - ipBlock:
  #           cidr: 103.21.244.0/22
  #       - ipBlock:
  #           cidr: 103.22.200.0/22
  #       - ipBlock:
  #           cidr: 103.31.4.0/22
  #       - ipBlock:
  #           cidr: 104.16.0.0/13
  #       - ipBlock:
  #           cidr: 104.24.0.0/14
  #       - ipBlock:
  #           cidr: 108.162.192.0/18
  #       - ipBlock:
  #           cidr: 131.0.72.0/22
  #       - ipBlock:
  #           cidr: 141.101.64.0/18
  #       - ipBlock:
  #           cidr: 162.158.0.0/15
  #       - ipBlock:
  #           cidr: 172.64.0.0/13
  #       - ipBlock:
  #           cidr: 188.114.96.0/20
  #       - ipBlock:
  #           cidr: 190.93.240.0/20
  #       - ipBlock:
  #           cidr: 197.234.240.0/22
  #       - ipBlock:
  #           cidr: 198.41.128.0/17
  #     ports:
  #       - protocol: TCP
  #         port: 80
  #       - protocol: TCP
  #         port: 443

  #   - to:
  #       - ipBlock:
  #           cidr: 2400:cb00::/32
  #       - ipBlock:
  #           cidr: 2606:4700::/32
  #       - ipBlock:
  #           cidr: 2803:f800::/32
  #       - ipBlock:
  #           cidr: 2405:b500::/32
  #       - ipBlock:
  #           cidr: 2405:8100::/32
  #       - ipBlock:
  #           cidr: 2a06:98c0::/29
  #       - ipBlock:
  #           cidr: 2c0f:f248::/32
  #     ports:
  #       - protocol: TCP
  #         port: 80
  #       - protocol: TCP
  #         port: 443
